--- a/lecture2/_vars.scss
+++ b/lecture2/_vars.scss
@@ -3,5 +3,5 @@ $widthSite: 1140px;
 $backBlock: #222;
 $colorText: #000;
 $gapGrid: 30px;
-$thirdSite: (
-    $widthSite - 2 * $gapGrid) / 3;
+$thirdSite: ($widthSite - 2 * $gapGrid) / 3;
+$widthBurgerMenu: 232px;
