--- a/lecture2/style.scss
+++ b/lecture2/style.scss
@@ -18,15 +18,47 @@ summary::-webkit-details-marker {
     padding-right: calc(50% - $widthSite / 2);
 }
 
+.box-content {
+    overflow: hidden;
+}
 .header {
     background-color: $backBlock;
     padding: 20px 0;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: relative;
+    
 
     &_left {
         display: flex;
         align-items: center;
         gap: 41px;
     }
+
+    
+}
+
+#burger {
+    position: absolute;
+    left: -999999px;
+    visibility: hidden;
+    &:checked~.nav {
+        right: -$widthBurgerMenu;
+    }
+}
+
+.nav {
+    background: #FFF;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    width: 232px;
+    padding: 32px;
+    box-sizing: border-box;
+    position: absolute;
+    top: 75px;
+    right: 0;
+    transition: right .3s;
 }
 
 .top-head {
@@ -64,14 +96,20 @@ summary::-webkit-details-marker {
     height: 132px;
     // padding-top: 39px;
     position: relative;
+    display: flex;
+    gap: $gapGrid;
+    padding-top: 39px;
+
 }
 
 .filter {
-    padding: 13px 16px 16px;
+    padding-top: 13px;
     box-sizing: border-box;
     width: 360px;
-    position: absolute;
-    top: 39px;
+    // position: absolute;
+    // top: 39px;
+    position: relative;
+    z-index: 10;
 
     &[open] {
         background: #FFF;
@@ -100,6 +138,15 @@ summary::-webkit-details-marker {
         font-weight: 600;
         line-height: normal;
         
+    }
+
+    &__content {
+        // position: absolute;
+        background-color: #FFF;
+        padding-top: 0;
+        padding-right: 16px;
+        padding-bottom: 16px;
+        padding-right: 16px;
     }
 
     &__item[open] .filter__heading{
@@ -136,6 +183,60 @@ summary::-webkit-details-marker {
         &:hover {
             color: $colorSelectSite;
         }
+    }
+}
+
+.sort {
+    display: flex;
+    // position: absolute;
+    gap: 28px;
+    // left: 490px;
+    // top: 51px;
+    padding-top: 12px;
+    &__details {
+        position: relative;
+    }
+
+    &__summary {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        
+    }
+
+    &__heading {
+        color: #6F6E6E;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .fa-angle-down {
+        color: #6F6E6E;
+    }
+
+    &__box {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        background: #FFF;
+        box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+        padding: 7px 30px 11px 9px;
+        position: absolute;
+        left: -9px;
+        top: 22px;
+    }
+    &__check {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        color: #6F6E6E;
+        font-family: Roboto;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
     }
 }
 
