--- a/seminar3/pink_layout/css/style.css
+++ b/seminar3/pink_layout/css/style.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@counter-style marker-font {
+  system: cyclic;
+  symbols: url("../img/registration/pick.sgv");
+  suffix: " ";
+}
 @keyframes vibrate-1 {
   0% {
     transform: translate(0);
@@ -19,6 +24,92 @@
     transform: translate(0);
   }
 }
+.form__title {
+  color: #222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.form__text {
+  width: 100%;
+  height: 45px;
+  border: 1px solid #A4A4A4;
+  padding-left: 17px;
+  color: #222;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.form__text::-moz-placeholder {
+  color: #B1B1B1;
+}
+.form__text::placeholder {
+  color: #B1B1B1;
+}
+.form__text:focus {
+  border-color: #F16D7F;
+  outline: 1px solid #F16D7F;
+}
+.form__text:hover {
+  border-color: #F16D7F;
+  box-shadow: 3px 4px 5px rgba(241, 109, 127, 0.53);
+}
+
+.button__grey {
+  color: #4A4A4A;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  border: 1px solid #A4A4A4;
+  background-color: #fff;
+  padding: 1rem 2rem;
+  transition: all 0.4s;
+}
+.button__grey:hover {
+  background-color: #F16D7F;
+  color: #fff;
+  border-color: #F16D7F;
+}
+
+.button__pink {
+  color: #FFF;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  background-color: #F16D7F;
+  padding: 1rem 2rem;
+  border: 1px solid #F16D7F;
+  transition: all 0.3s;
+}
+.button__pink:hover {
+  color: #F16D7F;
+  background-color: #fff;
+}
+
+.button__white {
+  color: #F16D7F;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 1rem 2rem;
+  border: 1px solid #F16D7F;
+  transition: all 0.3s;
+}
+.button__white:hover {
+  color: #fff;
+  background-color: #F16D7F;
+  transform: scale(1.05);
+}
+.button__white:active {
+  transform: scale(0.8);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -44,6 +135,10 @@ summary {
 
 summary::-webkit-details-marker {
   display: none;
+}
+
+ul {
+  list-style-type: none;
 }
 
 .container {
@@ -284,6 +379,7 @@ summary::-webkit-details-marker {
 }
 .offer-color {
   color: #F16D7F;
+  text-align: center;
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
@@ -391,26 +487,6 @@ summary::-webkit-details-marker {
   /* -webkit-animation: vibrate-1 0.3s linear infinite both;
   animation: vibrate-1 0.3s linear infinite both; */
 }
-.catalog-button__all-products {
-  color: #F16D7F;
-  /* font-family: Lato; */
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  padding: 1rem 2rem;
-  border: 1px solid #F16D7F;
-  transition: all 0.3s;
-}
-.catalog-button__all-products:hover {
-  color: #fff;
-  background-color: #F16D7F;
-  transform: scale(1.05);
-}
-.catalog-button__all-products:active {
-  transform: scale(0.8);
-}
-
 .feature {
   background-color: #222;
   display: flex;
@@ -1046,47 +1122,7 @@ summary::-webkit-details-marker {
   gap: 20px;
   padding-top: 17px;
 }
-.cart-form__title {
-  color: #222;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-}
-.cart-form__text {
-  width: 100%;
-  height: 45px;
-  border: 1px solid #A4A4A4;
-  padding-left: 17px;
-  color: #222;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-}
-.cart-form__text::-moz-placeholder {
-  color: #B1B1B1;
-}
-.cart-form__text::placeholder {
-  color: #B1B1B1;
-}
-.cart-form__text:focus {
-  border-color: #F16D7F;
-  outline: 1px solid #F16D7F;
-}
-.cart-form__text:hover {
-  border-color: #F16D7F;
-  box-shadow: 3px 4px 5px rgba(241, 109, 127, 0.53);
-}
 .cart-form__button {
-  color: #4A4A4A;
-  font-size: 11px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-  border: 1px solid #A4A4A4;
-  background-color: #fff;
-  padding: 1rem 2rem;
   margin-bottom: 37px;
 }
 .cart-form__checkout {
@@ -1124,20 +1160,78 @@ summary::-webkit-details-marker {
   border: 1px solid #E2E2E2;
 }
 .cart-form__checkout .amount-button {
-  color: #FFF;
-  font-size: 16px;
+  margin-top: 17px;
+}
+
+/**************************************************/
+/* registration page */
+.reg {
+  padding-top: 64px;
+  padding-bottom: 96px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: start;
+}
+.reg-form {
+  width: 32%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+}
+.reg-form__gender {
+  padding-top: 12px;
+  padding-bottom: 32px;
+  display: flex;
+  gap: 20px;
+}
+.reg-form__gender-radiogroup {
+  display: flex;
+  gap: 10px;
+}
+.reg-form__gender label {
+  color: #000;
+  font-size: 11px;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
-  background-color: #F16D7F;
-  padding: 1rem 2rem;
-  border: 1px solid #F16D7F;
-  margin-top: 17px;
-  transition: all 0.3s;
 }
-.cart-form__checkout .amount-button:hover {
-  color: #F16D7F;
-  background-color: #fff;
+.reg-form__dsc {
+  color: #B1B1B1;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.reg-form__button {
+  margin-top: 19px;
+  display: flex;
+  gap: 20px;
+}
+.reg-right {
+  width: 58%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 22px;
+}
+.reg-right__title, .reg-right__text, .reg-right__list-item {
+  color: #000;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.reg-right__list {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 16px;
+}
+.reg-right__list-item:before {
+  content: "✓";
+  padding-right: 22px;
 }
 
 @media (max-width: 768px) {
