--- a/seminar5/pink_layout/css/_catalog.scss
+++ b/seminar5/pink_layout/css/_catalog.scss
@@ -342,6 +342,7 @@
         &-text {
             // padding: 26px 16px 20px;
             padding: 24px 16px;
+            // width: $widthThird;
         }
 
         &-title {
