--- a/seminar5/pink_layout/css/_mediaTablet.scss
+++ b/seminar5/pink_layout/css/_mediaTablet.scss
@@ -53,6 +53,9 @@
             width: $widthHalf;
 
             // gap: 16px; остается 2%
+            // &-text {
+            //     width: $widthHalf;
+            // }
         }
     }
 
