--- a/lecture3/style.css
+++ b/lecture3/style.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.html {
+  scroll-behavior: smooth;
+}
+
 .box1 {
   text-shadow: 1px 1px 1px #000;
   color: #fff;
@@ -29,4 +38,63 @@
 
 .r5 {
   border-radius: 5px 10px 15px 30px/30px 15px 10px 5px;
+}
+
+/* parallax */
+.content {
+  background-color: #ccc;
+  height: 700px;
+}
+.content-header {
+  height: 50px;
+  background-color: #555;
+  position: sticky;
+  top: 0;
+}
+
+.menu {
+  position: sticky;
+  top: 20%;
+  width: 20%;
+  margin-left: 10%;
+  margin-bottom: 10%;
+}
+
+.main {
+  margin-left: 20%;
+}
+
+.parallax {
+  min-height: 300px;
+  background-image: url(https://img.freepik.com/free-photo/blue-foaming-waves-in-north-beach-in-nazare-portugal_1268-15934.jpg?w=900&t=st=1701437945~exp=1701438545~hmac=9d2a7281b30471dde28b803108dc1ec15a9f9ecad177af36e23039ef260b1b7f);
+  background-attachment: fixed;
+}
+
+/* figures */
+.item {
+  height: 200px;
+  background-color: #ccc;
+}
+
+.item1 {
+  -webkit-clip-path: circle(50px at 0 100px);
+          clip-path: circle(50px at 0 100px);
+  background-image: url(https://img.freepik.com/free-photo/blue-foaming-waves-in-north-beach-in-nazare-portugal_1268-15934.jpg?w=900&t=st=1701437945~exp=1701438545~hmac=9d2a7281b30471dde28b803108dc1ec15a9f9ecad177af36e23039ef260b1b7f);
+  background-size: cover;
+}
+
+.item2 {
+  -webkit-clip-path: ellipse(130px 140px at 10% 20%);
+          clip-path: ellipse(130px 140px at 10% 20%);
+}
+
+.item3 {
+  -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+          clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
+.item4 {
+  -webkit-clip-path: polygon(50% 10%, 12% 100%, 30% 40%, 0% 25%);
+          clip-path: polygon(50% 10%, 12% 100%, 30% 40%, 0% 25%);
+  background-image: url(https://img.freepik.com/free-photo/blue-foaming-waves-in-north-beach-in-nazare-portugal_1268-15934.jpg?w=900&t=st=1701437945~exp=1701438545~hmac=9d2a7281b30471dde28b803108dc1ec15a9f9ecad177af36e23039ef260b1b7f);
 }/*# sourceMappingURL=style.css.map */
